Uncle Bob refactoring

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div id="game-container"></div>
     </div>
 
-    <script src="questions.js"></script>
+    <!-- questions.js is now imported as a module -->
 
     <script>
         // Netlify Identity Logic
